--- a/index.html
+++ b/index.html
@@ -1,131 +1,220 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mission to Mars: Suit Up and Step Into the Red Planet</title>
+  <title>Field Trip: Mission to Mars</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
-    body { font-family: 'Comic Sans MS', sans-serif; background: #0e1a24; color: white; margin: 0; padding: 0; }
-    header, footer { text-align: center; padding: 1rem; border-radius: 20px; background: #111; }
-    main { padding: 2rem; position: relative; }
-    button { background: #e1a948; color: #000; border: none; border-radius: 12px; padding: 0.5rem 1rem; cursor: pointer; }
-    iframe { width: 100%; height: 400px; border: none; border-radius: 12px; margin-top: 1rem; }
-    textarea { width: 100%; height: 80px; margin-top: 1rem; background: #fff; color: #000; padding: 0.5rem; }
-
-    #openQuiz, #openCanvas {
-      position: absolute; top: 40px; z-index: 10;
-      padding: 0.5rem 1rem; font-weight: bold; border-radius: 5px;
+    body {
+      font-family: "Comic Sans MS", cursive, sans-serif;
+      background: #fffce6;
+      margin: 0;
+      padding: 0;
     }
-
-    #openQuiz { right: 140px; }
-    #openCanvas { right: 30px; }
-
+    header {
+      display: flex;
+      align-items: center;
+      padding: 1rem;
+      background-color: #fff3cd;
+      border-bottom: 2px solid #e1a948;
+    }
+    header img {
+      height: 50px;
+      margin-right: 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.5rem;
+    }
+    main {
+      padding: 1.5rem;
+      position: relative;
+    }
+    button {
+      background-color: #ffda77;
+      color: #000;
+      border: none;
+      border-radius: 12px;
+      padding: 0.5rem 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      margin-right: 0.5rem;
+    }
     #quizBox, #canvasBox {
-      display: none; position: fixed; top: 100px; left: 50%;
+      display: none;
+      position: fixed;
+      top: 100px;
+      left: 50%;
       transform: translateX(-50%);
-      background: #fff; color: #000; padding: 1rem; border-radius: 20px; border-radius: 10px;
-      z-index: 999; max-width: 360px; box-shadow: 0 0 10px #000;
+      background: white;
+      color: black;
+      padding: 1rem;
+      border-radius: 16px;
+      z-index: 1000;
+      max-width: 320px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.2);
     }
-
-    #quizBox h3, #canvasBox h3 { margin-top: 0; }
-    #quizBox button, #canvasBox button { margin-top: 0.5rem; }
-    canvas { border: 1px solid #000; background: #fff; margin-top: 0.5rem; }
+    .close-btn {
+      text-align: right;
+      font-size: 1.2rem;
+      cursor: pointer;
+      margin-top: 0.5rem;
+    }
+    #reflection {
+      width: 100%;
+      height: 100px;
+      border-radius: 12px;
+      margin-top: 1rem;
+      padding: 0.5rem;
+      font-family: "Comic Sans MS", cursive, sans-serif;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 12px;
+      margin-top: 1rem;
+    }
+    canvas {
+      border: 1px solid #000;
+      border-radius: 12px;
+      margin-top: 0.5rem;
+    }
+    .toolbar {
+      margin-bottom: 1rem;
+    }
+    .tooltip {
+      position: absolute;
+      background: #fff3cd;
+      color: #000;
+      padding: 0.3rem 0.6rem;
+      font-weight: bold;
+      border-radius: 10px;
+      animation: blink 1s step-start infinite;
+    }
+    @keyframes blink {
+      50% { opacity: 0; }
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      background: #f8f8f8;
+      padding: 1rem;
+      margin-top: 2rem;
+      border-top: 2px solid #eee;
+    }
   </style>
 </head>
 <body>
+
 <header>
-  <h1>Mission to Mars</h1>
-  <p>Suit Up and Step Into the Red Planet</p>
-  <p><strong>Presented by The Curator Club | GMIS Semarang</strong></p>
+  <img src="gmislogo.png" alt="GMIS Logo">
+  <h1>Field Trip: Mission to Mars</h1>
 </header>
 
-<div class="audio-wrapper" style="text-align:center;">
-  <audio autoplay loop controls>
-    <source src="https://freesound.org/data/previews/661/661098_1648170-lq.mp3" type="audio/mpeg">
-  </audio>
-</div>
-
 <main>
-  <button id="openQuiz">Quiz</button>
-  <button id="openCanvas">Draw</button>
+  <div class="toolbar">
+    <button onclick="toggleQuiz()">Quiz</button>
+    <button onclick="toggleCanvas()">Draw</button>
+    <button onclick="toggleAudio()">Sound: Off</button>
+  </div>
 
-  <model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-    ar camera-controls auto-rotate style="width: 100%; height: 500px;" alt="Astronaut 3D model">
-    <div slot="hotspot-1" data-position="0.2m 1.5m 0.3m" data-normal="0m 1m 0m">
-      <div class="annotation">Helmet: Provides oxygen and visibility</div>
-    </div>
-    <div slot="hotspot-2" data-position="0m 1.1m 0.2m" data-normal="0m 1m 0m">
-      <div class="annotation">Suit: Pressurized protection from Mars' atmosphere</div>
-    </div>
+  <model-viewer id="marsModel" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+    ar auto-rotate camera-controls style="width: 100%; height: 500px;" alt="3D Astronaut">
   </model-viewer>
 
+  <!-- Tooltips (position visually aligned) -->
+  <div class="tooltip" style="top: 60px; left: 40px;">1</div>
+  <div class="tooltip" style="top: 130px; left: 100px;">2</div>
+  <div class="tooltip" style="top: 180px; left: 160px;">3</div>
+  <div class="tooltip" style="top: 250px; left: 220px;">4</div>
+
+  <!-- Quiz Box -->
   <div id="quizBox">
     <h3>Why do astronauts need suits on Mars?</h3>
     <form onsubmit="event.preventDefault(); submitQuiz();">
       <label><input type="radio" name="q1" value="1"> To look cool</label><br>
       <label><input type="radio" name="q1" value="2"> To stay warm</label><br>
-      <label><input type="radio" name="q1" value="3"> To protect from Mars environment</label><br>
+      <label><input type="radio" name="q1" value="3"> To survive the Mars environment</label><br>
       <button type="submit">Submit</button>
     </form>
-    <p id="quizFeedback" style="margin-top:0.5rem;"></p>
+    <p id="quizFeedback"></p>
+    <div class="close-btn" onclick="toggleQuiz()">X</div>
   </div>
 
+  <!-- Canvas Drawing -->
   <div id="canvasBox">
-    <h3>Draw Your Idea of Mars!</h3>
+    <h3>Draw Your Idea of Mars</h3>
     <canvas id="drawCanvas" width="320" height="200"></canvas><br>
     <button onclick="clearCanvas()">Clear</button>
+    <div class="close-btn" onclick="toggleCanvas()">X</div>
   </div>
 
-  <h2>Explore the Martian Surface</h2>
+  <!-- Mars Panorama -->
+  <h3>Explore Mars Surface</h3>
   <iframe src="https://www.360cities.net/embed_iframe/curiosity-rover-selfie"></iframe>
 
-  <h2>Reflection Journal</h2>
-  <textarea id="reflection" placeholder="What surprised you most about exploring Mars?"></textarea>
+  <!-- Reflection -->
+  <h3>Reflection Journal</h3>
+  <textarea id="reflection" placeholder="What surprised you most about Mars?"></textarea><br>
   <button onclick="saveReflection()">Save Reflection</button>
 </main>
 
 <footer>
-  <p>National Portrait Gallery, Smithsonian Institution</p>
-  <p>8th and G Streets NW, Washington, DC 20001</p>
+  National Portrait Gallery, Smithsonian Institution<br>
+  8th and G Streets NW, Washington, DC 20001
 </footer>
 
 <script>
-  document.getElementById('openQuiz').onclick = () => {
-    const box = document.getElementById('quizBox');
-    box.style.display = box.style.display === "none" ? "block" : "none";
-  };
-  document.getElementById('openCanvas').onclick = () => {
-    const box = document.getElementById('canvasBox');
-    box.style.display = box.style.display === "none" ? "block" : "none";
-  };
+  const audio = new Audio("https://freesound.org/data/previews/661/661098_1648170-lq.mp3");
+  audio.loop = true;
+  let audioPlaying = false;
+
+  function toggleAudio() {
+    if (audioPlaying) {
+      audio.pause();
+      document.querySelector('button[onclick="toggleAudio()"]').innerText = "Sound: Off";
+    } else {
+      audio.play();
+      document.querySelector('button[onclick="toggleAudio()"]').innerText = "Sound: On";
+    }
+    audioPlaying = !audioPlaying;
+  }
+
+  function toggleQuiz() {
+    const quiz = document.getElementById("quizBox");
+    quiz.style.display = quiz.style.display === "block" ? "none" : "block";
+  }
+
+  function toggleCanvas() {
+    const canvas = document.getElementById("canvasBox");
+    canvas.style.display = canvas.style.display === "block" ? "none" : "block";
+  }
 
   function submitQuiz() {
     const selected = document.querySelector('input[name="q1"]:checked');
-    const feedback = document.getElementById('quizFeedback');
-    if (selected) {
-      feedback.innerText = selected.value === "3" ? "Correct! Suits protect against Mars' harsh environment." : "Not quite. Try again!";
+    const feedback = document.getElementById("quizFeedback");
+    if (selected && selected.value === "3") {
+      feedback.innerText = "Correct!";
     } else {
-      feedback.innerText = "Please select an answer.";
+      feedback.innerText = "Try again!";
     }
   }
 
   function saveReflection() {
-    const reflection = document.getElementById('reflection').value;
-    localStorage.setItem('marsReflection', reflection);
-    alert('Your reflection has been saved in this browser.');
+    const content = document.getElementById("reflection").value;
+    localStorage.setItem("marsReflection", content);
+    alert("Saved!");
   }
 
   const canvas = document.getElementById("drawCanvas");
   const ctx = canvas.getContext("2d");
   let drawing = false;
 
-  canvas.onmousedown = () => { drawing = true };
+  canvas.onmousedown = () => drawing = true;
   canvas.onmouseup = () => { drawing = false; ctx.beginPath(); };
-  canvas.onmousemove = draw;
-
-  function draw(e) {
+  canvas.onmousemove = (e) => {
     if (!drawing) return;
     ctx.lineWidth = 2;
     ctx.lineCap = "round";
@@ -134,11 +223,31 @@
     ctx.stroke();
     ctx.beginPath();
     ctx.moveTo(e.offsetX, e.offsetY);
-  }
+  };
 
   function clearCanvas() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
   }
 </script>
+
 </body>
 </html>
+
+
+   
+  
+  
+
+ 
+
+  
+ 
+  
+    
+    
+
+  
+  
+   
+
+  
